# human-pose-estimation-2d-demo

./: .gitignore  CMakeLists.txt  README.md  build-poseextractor.bat  build-poseextractor.sh  download_model.bat  download_model.sh  human-pose-estimation-2d.py
